crates/oxidelake-tui/tests/snapshots/tui_pty_test__demo_renders_navigates_resizes_and_quits-3.snap
---
source: crates/oxidelake-tui/tests/tui_pty_test.rs
assertion_line: 83
expression: resized
---
size: 120x40  cursor: hidden
OxideLake  data/t.parquet — SELECT k, sum(v), count(v) FROM t WHERE k >= 2 AND v < 4.0 GROUP BY k
┌ Plan DAG ────────────────────────────────────────────────┐┌ Telemetry ───────────────────────────────────────────────┐
│  GpuAggregateExec [CUDA]                                 ││████████████████████████████████████████████              │
│    └─ GpuFilterExec [CUDA]                               ││█████████████████VRAM: 6.0 GiB / 8.0 GiB ███              │
│▶     └─ DataSourceExec [CPU]                             ││██████████████████████                                    │
│                                                          ││██████████████pinned RAM: 1.5 GiB / 4.0 GiB               │
│                                                          ││███████████████                                           │
│                                                          ││█████████████disk spill: 512.0 MiB / 2.0 GiB              │
│                                                          ││PCIe  H2D 35.3 MiB  D2H 18.6 MiB                          │
│                                                          ││NVMe  spilled 3.0 GiB (42 demotions)  reloaded 256.0 MiB (│
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          │└──────────────────────────────────────────────────────────┘
│                                                          │┌ Describe ────────────────────────────────────────────────┐
│                                                          ││column  type   min     max    nulls   p25    p50    p99   │
│                                                          ││k       Int64  0       99     0       24     49     98    │
└──────────────────────────────────────────────────────────┘│v       Float6 0.0     24.0   76923   6.0    12.0   23.75 │
┌ Inspector ───────────────────────────────────────────────┐│s       Utf8   s0      s6     0                           │
│DataSourceExec [CPU]                                      ││                                                          │
│parquet: data/t.parquet, 100 row groups                   ││                                                          │
│                                                          ││                                                          │
│rows in             1000000                               ││                                                          │
│rows out            1000000                               ││                                                          │
│batches                 100                               ││                                                          │
│latency/batch      4.100 ms                               ││                                                          │
│memory              8.0 MiB                               ││                                                          │
│H2D / D2H       0 B /    0 B                              ││                                                          │
│cpu fallback        0 / 100                               ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘
 ↑/↓ select operator  Tab next panel  q quit
