crates/oxidelake-tui/tests/snapshots/tui_pty_test__demo_renders_navigates_resizes_and_quits.snap
---
source: crates/oxidelake-tui/tests/tui_pty_test.rs
expression: t.screen()
---
size: 80x24  cursor: hidden
OxideLake  data/t.parquet — SELECT k, sum(v), count(v) FROM t WHERE k >= 2 AND v
┌ Plan DAG ────────────────────────────┐┌ Telemetry ───────────────────────────┐
│▶ GpuAggregateExec [CUDA]             ││█████████████████████████████         │
│    └─ GpuFilterExec [CUDA]           ││███████VRAM: 6.0 GiB / 8.0 GiB        │
│      └─ DataSourceExec [CPU]         ││██████████████                        │
│                                      ││█████host RAM: 1.5 GiB / 4.0 GiB      │
│                                      ││                                      │
│                                      ││        disk spill: 512.0 MiB         │
│                                      ││PCIe  H2D 35.3 MiB  D2H 18.6 MiB      │
│                                      ││NVMe  spilled 3.0 GiB (42 demotions)  │
│                                      │└──────────────────────────────────────┘
│                                      │┌ Describe ────────────────────────────┐
└──────────────────────────────────────┘│colu type min  max  nul p25  p50  p99 │
┌ Inspector ───────────────────────────┐│k    Int6 0    99   0   24   49   98  │
│GpuAggregateExec [CUDA]               ││v    Floa 0.0  24.0 769 6.0  12.0 23.7│
│group_by=[k], aggr=[SUM(v), COUNT(v)] ││s    Utf8 s0   s6   0                 │
│                                      ││                                      │
│rows in              812400           ││                                      │
│rows out                  9           ││                                      │
│batches                 100           ││                                      │
│latency/batch      1.840 ms           ││                                      │
│memory             16.0 MiB           ││                                      │
└──────────────────────────────────────┘└──────────────────────────────────────┘
 ↑/↓ select operator  Tab next panel  q quit
